# datacite-utils

./: README.md
affiliation-parsing/: Cargo.toml  README.md
affiliation-parsing/src/: main.rs
fast-affiliation-parser/: Cargo.toml  README.md
fast-affiliation-parser/src/: main.rs
fast-field-parser/: Cargo.toml  README.md
fast-field-parser/src/: main.rs
fast-field-parser/tests/: example.json  field_extraction_tests.rs
find-related-identifiers/: Cargo.toml  README.md
find-related-identifiers/src/: main.rs
find_related_identifiers_in_data_file/: README.md  find_related_identifiers_in_data_file.py
get_record_activities/: README.md  get_record_activities.py
get_record_activities/calculate_activities_stats/: README.md  calculate_activities_stats.py
get_sample_from_query/: README.md
parse_data_file/: README.md  parse_data_file.py  requirements.txt
process_data_file/: README.md  process_data_file.py  requirements.txt
process_data_file_for_metadata_health_api/: README.md  process_data_file_for_metadata_health_api.py
sample-dois/: README.md  sample_dois.py
