[package]
name = "affiliation-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"
deunicode = "1.6"
lazy_static = "1.5"
log = "0.4"
regex = "1.12"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "5.0"
