[package]
name = "fast-field-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
csv = "1.1"
flate2 = "1.0"
glob = "0.3"
lazy_static = "1.4.0"
log = "0.4"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "4.0"
indicatif = "0.17.0"

[dev-dependencies]
tempfile = "3.2"
assert_cmd = "2.0"
predicates = "2.1"
flate2 = "1.0"