[package]
name = "find-related-identifiers"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8.1"
flate2 = "1.0"
walkdir = "2.5"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
thiserror = "1.0"
colored = "2.1"
dashmap = "5.5"
indicatif = "0.17"